--- a/SimplePFC/AddMeal/Controller/AddMeal.storyboard
+++ b/SimplePFC/AddMeal/Controller/AddMeal.storyboard
@@ -169,7 +169,7 @@
                                                         </constraints>
                                                     </stackView>
                                                 </subviews>
-                                                <color key="backgroundColor" red="0.5" green="0.88216938040000004" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" systemColor="systemMintColor"/>
                                                 <constraints>
                                                     <constraint firstItem="oDB-G1-XLc" firstAttribute="top" secondItem="Zwv-h6-lgV" secondAttribute="top" id="Kn7-V8-1Ur"/>
                                                     <constraint firstAttribute="bottom" secondItem="oDB-G1-XLc" secondAttribute="bottom" id="V5T-Qu-Vmd"/>
@@ -180,7 +180,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.5" green="0.88216938040000004" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" systemColor="systemMintColor"/>
                                 <constraints>
                                     <constraint firstItem="wNI-9R-etn" firstAttribute="width" secondItem="Dxk-HD-1vU" secondAttribute="width" multiplier="0.8" id="E6P-yT-8cl"/>
                                     <constraint firstItem="wNI-9R-etn" firstAttribute="centerX" secondItem="Dxk-HD-1vU" secondAttribute="centerX" id="eRH-GM-KEr"/>
@@ -190,7 +190,7 @@
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2e-nd-pDV">
                                 <rect key="frame" x="167.33333333333334" y="741.66666666666663" width="58.666666666666657" height="34.333333333333371"/>
-                                <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" systemColor="systemMintColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="追加">
                                     <color key="baseForegroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -228,6 +228,9 @@
     <resources>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
