--- a/SimplePFC/AddMeal/Controller/AddMeal.storyboard
+++ b/SimplePFC/AddMeal/Controller/AddMeal.storyboard
@@ -189,11 +189,15 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j2e-nd-pDV">
-                                <rect key="frame" x="167.33333333333334" y="741.66666666666663" width="58.666666666666657" height="34.333333333333371"/>
+                                <rect key="frame" x="156.66666666666666" y="741.66666666666663" width="80" height="50"/>
                                 <color key="backgroundColor" systemColor="systemMintColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="MDO-jQ-y0C"/>
+                                    <constraint firstAttribute="height" constant="50" id="a3v-XW-hPP"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="追加">
-                                    <color key="baseForegroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                             </button>
                         </subviews>
